--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,27 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <title>Энсар Карго</title>
+    <link rel="icon" href="./logos.svg" type="image/svg" />
+    <link rel="icon" href="./logos.svg" type="image/x-icon" sizes="150x150" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Карго | Китай - Бишкек
+      🔗 Taobao, Pinduoduo, 1688
+      💵 1кг - 3.5$
+      📦 Тез жеткируу кызматы 6-15 кун"
     />
-    <title>ENSARCARGO</title>
+    <meta property="og:title" content="Энсар Карго" />
+    <meta
+      property="og:description"
+      content="Карго | Китай - Бишкек
+      🔗 Taobao, Pinduoduo, 1688
+      💵 1кг - 3.5$
+      📦 Тез жеткируу кызматы 6-15 кун"
+    />
+    <meta name="og:url" content="https://ensarcargo.com" />
+    <meta name="og:type" content="website" />
+    <meta name="og:image" content="logos.svg" />
   </head>
   <body>
     <div id="root"></div>
